[Qt] QStyle: Set State_Enabled by default when painting style widgets. https://bugs.webkit.org/show_bug.cgi?id=112688

Patch by David Rosca <nowrep@gmail.com> on 2013-03-19
Reviewed by Jocelyn Turcotte.

All Qt style widgets were painted with a disabled state, even when
they actually were enabled.
This change fixes it by setting State_Enabled as a default state,
which is then correctly removed when element is disabled.

* Source/WebCore/platform/qt/RenderThemeQStyle.cpp:

Canonical link: https://commits.webkit.org/131006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146205 268f45cc-cd09-0410-ab3c-d52691b4dbfc